- added Roguish Acrobat subclass
- fixed Bow Mastery soft lock