@@ -3,7 +3,8 @@
 1.4.33.59:
 
 - added Roguish Acrobat subclass
-- fixed Bow Mastery soft lock
+- changed some mod spell sprites
+- fixed Bow Mastery soft locking
 
 1.4.33.58:
 
